--- a/index.html
+++ b/index.html
@@ -7,4 +7,19 @@
   <body>
     <button>Click me</button>
   </body>
+ <script>
+
+ function createParagraph() {
+  var para = document.createElement('p');
+  para.textContent = 'You clicked the button!';
+  document.body.appendChild(para);
+}
+
+var buttons = document.querySelectorAll('button');
+
+for (var i = 0; i < buttons.length ; i++) {
+  buttons[i].addEventListener('click', createParagraph);
+}       // здесь будет JavaScript
+
+</script>
 </html>
